# npbk

./: .gitignore  GOST_COMPLIANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/npbk/: __init__.py  augmentation.py  authenticator.py  constants.py  container.py  layer1.py  layer2.py  metrics.py  trainer.py  types.py  utils.py
tests/: conftest.py  test_authenticator.py  test_container.py  test_layer1.py  test_metrics.py  test_trainer.py
